# harbor

./: .gitignore  PLAN.md  README.md  pyproject.toml
.kiro/agents/: harbor-dev.json
.kiro/steering/: architecture.md  cdk-standards.md  debugging-guidelines.md  design-principles.md  frontend-standards.md  python-standards.md
design-system/harbor/: MASTER.md
docs/: api-reference.md  architecture.md  enterprise-integration-guide.md  getting-started.md  iam-identity-center-setup.md
frontend/: .env  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/auth/: AuthContext.tsx  ProtectedRoute.tsx
frontend/src/pages/: AgentCatalog.tsx  AgentDetail.tsx  AuditLog.tsx  Dashboard.tsx  Discovery.tsx  PolicyManagement.tsx  RegisterAgent.tsx  ReviewQueue.tsx
frontend/src/types/: agent.ts
infrastructure/: README.md  cdk.json  package-lock.json  package.json
infrastructure/ct-integration/config-rules/: agent_compliance_rule.py
infrastructure/ct-integration/scps/: deny-modify-harbor-central.json  enforce-agent-tagging.json
infrastructure/lib/: config.ts  harbor-stack.ts
infrastructure/lib/lambda/: agent-proxy.py
infrastructure/test/: harbor-stack.test.ts
samples/life-insurance/: README.md  api-contract.md  architecture.md  requirement.md  strands-integration.md
scripts/: deploy.sh  destroy.sh
src/harbor/: __init__.py  exceptions.py  main.py
tests/unit/: conftest.py  test_discovery.py  test_models.py  test_policy.py  test_registry.py  test_routes.py  test_store.py
(+92 files in other folders)
